<resources>
    <string name="app_name">Page Notifier</string>
    <string name="action_new">New</string>
    <string name="action_settings">Settings</string>

    <string name="addedit_address_edit_text">Website URL</string>
    <string name="addedit_confirm_delete">Apply action</string>
    <string name="addedit_confirm_edit">Apply edit</string>
    <string name="addedit_delete_button">Delete</string>
    <string name="addedit_dont_delete_button">Discard</string>
    <string name="addedit_dont_edit_button">Discard</string>
    <string name="addedit_frequency_seek_bar">Alerts &amp; refresh website frequency</string>
    <string name="addedit_incorrect_url">Invalid URL!</string>
    <string name="addedit_item_deleted">The task has been deleted.</string>
    <string name="addedit_item_not_updated">The task has not been updated.</string>
    <string name="addedit_item_updated">The task has been updated.</string>
    <string name="addedit_message_confirm_delete">Are you sure you want to remove the task?</string>
    <string name="addedit_edit_button">Apply</string>
    <string name="addedit_message_confirm_edit">The task is running. Restart will be needed - do you want to continue?</string>
    <string name="addedit_name_edit_text">Name of a task</string>
    <string name="addedit_new_item_added">New website to follow has been added.</string>
    <string name="addedit_new_item_not_added">Task has not been added.</string>
    <string name="addedit_no_name">Please provide name of the task!</string>
    <string name="addedit_no_url">Please provide website\'s URL!</string>
    <string name="addedit_alerts_switch">Receive alerts</string>
    <string name="addedit_info_about_frequency">
        You can choose how often the site will be checked for changes.</string>
    <string name="addedit_info_about_notifying">
        When a change is detected, you will receive a notification.</string>
    <string name="addedit_save_battery">
        Save battery (may cause less frequent refreshing - only in idle device mode)</string>
    <string name="addedit_wifi">Check for changes only when WiFi is enabled</string>
    <string name="addedit_save_battery_for_Oreo">
        Save battery and memory (may cause less frequent refreshing depending on battery and memory state)
    </string>
    <string name="addedit_info_title_label">Help</string>
    <string name="addedit_frequency_value_sample">15 min</string>
    <string name="addedit_battery_options_info_title_label">Save battery options</string>


    <string name="details_aborted">Following changes aborted by user.</string>
    <string name="details_alerts">Alerts:</string>
    <string name="details_alerts_off">Off</string>
    <string name="details_alerts_on">On</string>
    <string name="details_co">Every</string>
    <string name="details_delete_label">Delete</string>
    <string name="details_edit_label">Edit</string>
    <string name="details_frequency">Refresh:</string>
    <string name="details_frequency_example">every 5 minutes</string>
    <string name="details_goto_label">Go to</string>
    <string name="details_name">Name:</string>
    <string name="details_not_updated">No changes.</string>
    <string name="details_ok_label">OK</string>
    <string name="details_sample_name">Name of the task</string>
    <string name="details_sample_website"><![CDATA[https://play.google.com/store/apps/details?id=com.smutkiewicz.soundbank]]></string>
    <string name="details_title_label">Details of the task</string>
    <string name="details_updated">Changes on website.</string>
    <string name="details_updates">Status:</string>
    <string name="details_url">URL:</string>

    <string name="content_provider_invalid_uri">invalid Uri</string>
    <string name="job_scheduler_scheduling_job">Scheduling job</string>
    <string name="job_scheduler_no_jobs_to_cancel">No pending jobs to cancel.</string>
    <string name="job_scheduler_all_jobs_cancelled">All tasks are off.</string>
    <string name="job_scheduler_cancelled_job">Ended a task. Id %d</string>

    <string name="main_disabled">Following the website is off.</string>
    <string name="main_enabled">Following the website is on.</string>
    <string name="main_granter_write_permission_denied">Application has no permission to access memory.</string>
    <string name="main_my_jobs_title">My tasks</string>
    <string name="main_search_hint">Search&#8230;</string>
    <string name="main_update_database_failed">Error</string>

    <string name="service_label">WebService</string>
    <string name="service_notification_channel_name">Changes on websites</string>
    <string name="service_started">WebService started!</string>
    <string name="service_stopped">WebService stopped!</string>
    <string name="service_website_updated">Changes on website!</string>
    <string name="summary_author">Version 0.8 alpha, Michał Smutkiewicz</string>
    <string name="summary_data_usage">Control app\'s data usage</string>
    <string name="summary_services_on_off">On/off following all websites</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_data_usage">Data usage</string>
    <string name="title_info">Info about version and author</string>
    <string name="title_services_on_off">Services</string>
    <string name="list_item_test_text">Test text</string>
    <string name="settings_info_author">Page Notifier\n\n
                                All rights reserved\n
                                Version 0.8\n
                                Codename: HelloWorld\n
                                &#169; Aesthetic Apps Studios 2017
    </string>
    <string name="settings_info_author_title">About the app</string>
</resources>
