<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/detailsDialogGridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:numColumns="auto_fit"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:stretchMode="columnWidth"
            android:useDefaultMargins="true">

    <TextView
        android:id="@+id/nameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="0"
        android:layout_gravity="center_vertical|right"
        android:layout_row="0"
        android:text="@string/details_name"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:text="@string/details_sample_name"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <TextView
        android:id="@+id/urlLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:layout_row="1"
        android:text="@string/details_url"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <TextView
        android:id="@+id/urlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:scrollHorizontally="false"
        android:text="@string/details_sample_website"/>

    <TextView
        android:id="@+id/frequencyLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:layout_row="2"
        android:text="@string/details_frequency"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <TextView
        android:id="@+id/frequencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:text="@string/details_frequency_example"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <TextView
        android:id="@+id/alertsLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:layout_row="3"
        android:text="@string/details_alerts"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <TextView
        android:id="@+id/alertsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:text="@string/details_alerts_off"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

</GridLayout>